--- a/src/app/modules/authentication/mail-sent/mail-sent.component.html
+++ b/src/app/modules/authentication/mail-sent/mail-sent.component.html
@@ -8,20 +8,20 @@
 
         <mat-card-header class="mb-4">
             <mat-card-title class="text-center">Mail sent</mat-card-title>
-            <mat-card-subtitle>
-                We just sent a mail to reset your password.
+            <mat-card-subtitle class="text-center">
+                We just sent a mail for confirmation
             </mat-card-subtitle>
         </mat-card-header>
 
         <mat-card-content class="w-full">
-        <div class="flex items-center space-x-1">
-            <button mat-flat-button color="primary" type="submit" class="w-full" [routerLink]="['/auth/login']">
-                Back to login
-            </button>
-            <a mat-icon-button color="primary" href="http://gmail.com" target="_blank">
-                <mat-icon>open_in_new</mat-icon>
-            </a>
-        </div>
+            <div class="flex items-center space-x-1">
+                <button mat-flat-button color="primary" type="submit" class="w-full" [routerLink]="['/auth/login']">
+                    Back to login
+                </button>
+                <a mat-icon-button color="primary" href="http://gmail.com" target="_blank">
+                    <mat-icon>open_in_new</mat-icon>
+                </a>
+            </div>
         </mat-card-content>
     </mat-card>
 </div>
