--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<h1 mat-h1>Heading Level 1 (h1)</h1>
+<h2 mat-h2>Heading Level 2 (h2)</h2>
+<h3 mat-h3>Heading Level 3 (h3)</h3>
+<h4 mat-h4>Heading Level 4 (h4)</h4>
+<h5 mat-h5>Heading Level 5 (h5)</h5>
+<h6 mat-h6>Heading Level 6 (h6)</h6>
+
+<div mat-display-1>Display 1</div>
+<div mat-display-2>Display 2</div>
+<div mat-display-3>Display 3</div>
+
+<p mat-subheading-1>Subheading 1</p>
+<p mat-subheading-2>Subheading 2</p>
+
+<p mat-body-1>Body text 1</p>
+<p mat-body-2>Body text 2</p>
+
+<p mat-caption>Caption text</p>
+
+<button mat-button>Button text</button>
+<input matInput placeholder="Input text">
