--- a/src/app/modules/settings/layout/sidebar/sidebar.component.html
+++ b/src/app/modules/settings/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="h-screen">
+<mat-drawer-container>
     <mat-drawer #drawer mode="side" [opened]="true">
         <button mat-menu-item [routerLink]="'profile'"><mat-icon>personal</mat-icon>Personal</button>
     </mat-drawer>
