--- a/src/app/modules/settings/profile-settings/personal/personal.component.html
+++ b/src/app/modules/settings/profile-settings/personal/personal.component.html
@@ -1,1 +1,4 @@
-<p>personal works!</p>
+<div class="p-4">
+    <app-user-card></app-user-card>
+    <app-user-edit-accordion></app-user-edit-accordion>
+</div>
