--- a/src/app/modules/settings/profile-settings/security/security.component.html
+++ b/src/app/modules/settings/profile-settings/security/security.component.html
@@ -1,1 +1,11 @@
-<app-update-password></app-update-password>
+<mat-tab-group class="select-none">
+    <mat-tab label="Update password">
+        <div class=" flex justify-center">
+
+            <app-update-password></app-update-password>
+        </div>
+    </mat-tab>
+    <mat-tab label="2-factor authentication">
+        This module will be coming soon.
+    </mat-tab>
+</mat-tab-group>
