--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,6 @@ mat-divider {
   margin-top: 0.5rem /* 8px */ !important;
   margin-bottom: 0.5rem /* 8px */ !important;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
