--- a/src/app/layout/appbar/menu/menu.component.html
+++ b/src/app/layout/appbar/menu/menu.component.html
@@ -10,7 +10,8 @@
 
     <mat-card class="example-card !shadow-none">
         <mat-card-header *ngIf="currentUser$ | async as currentUser">
-            <img mat-card-avatar [src]="currentUser.user_metadata['picture']" alt="User Avatar">
+            <!-- TODO: this dummy image is just for client satisfaction -->
+            <img mat-card-avatar [src]="currentUser.user_metadata['picture'] ?? 'https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1709337600&semt=ais'" alt="User Avatar">
             <mat-card-title>{{ currentUser.user_metadata['full_name'] }}</mat-card-title>
             <mat-card-subtitle>{{ currentUser.email }}</mat-card-subtitle>
         </mat-card-header>
