--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container autosize class="h-full fixed top-0                                                                                           ">
     <mat-drawer mode="side" [opened]="isOpened">
         <div>
-            <a mat-menu-item [href]="'https://my-company-client.com/user-id/'" target="_blank"><mat-icon>open_in_new</mat-icon>Go to store</a>
+            <a mat-menu-item [href]="'https://glowing-marigold-3c3b5e.netlify.app/'" target="_blank"><mat-icon>open_in_new</mat-icon>Go to store</a>
             <button mat-menu-item routerLink="/home"><mat-icon>home</mat-icon>Home</button>
             <button mat-menu-item routerLink="/orders"><mat-icon>assignment</mat-icon>My orders</button>
             <button mat-menu-item routerLink="/messages"><mat-icon>message</mat-icon>Messages</button>
