--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -8,6 +8,7 @@
             <button mat-menu-item routerLink="/delivery"><mat-icon>local_shipping</mat-icon>Delivery</button>
         </div>
         <div>
+            <button mat-menu-item routerLink="/support"><mat-icon>support</mat-icon>Support</button>
             <button mat-menu-item routerLink="/settings"><mat-icon>settings</mat-icon>Settings</button>
         </div>
     </mat-drawer>
