--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,5 +30,15 @@ mat-divider {
   margin-bottom: 0.5rem /* 8px */ !important;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.page {
+  height: 90vh;
+}
