feat: remove todo

--- a/src/app/layout/appbar/languages-menu/languages-menu.component.html
+++ b/src/app/layout/appbar/languages-menu/languages-menu.component.html
@@ -1,9 +1,8 @@
+<button mat-menu-item [matMenuTriggerFor]="languagesMenu">
+  <mat-icon>language</mat-icon>Languages
+</button>
+
 <mat-menu #languagesMenu="matMenu">
-    <button mat-menu-item>English</button>
-    <button mat-menu-item>Spanish</button>
-    <!-- Add more languages as needed -->
+  <button mat-menu-item>English</button>
+  <button mat-menu-item>Spanish</button>
 </mat-menu>
-
-
-
-<button mat-menu-item [matMenuTriggerFor]="languagesMenu"><mat-icon>language</mat-icon>Languages</button>
