--- a/src/app/layout/appbar/appbar.component.html
+++ b/src/app/layout/appbar/appbar.component.html
@@ -2,7 +2,7 @@
     <button mat-icon-button (click)="toggleSidebar()">
         <mat-icon>menu</mat-icon>
     </button>
-    <span>Your company</span>
+    <span>My 1.0 app</span>
     <span class="spacer"></span>
     <app-menu></app-menu>
 </mat-toolbar>
