--- a/src/app/modules/settings/site-settings/store-customization/store-customization.component.html
+++ b/src/app/modules/settings/site-settings/store-customization/store-customization.component.html
@@ -6,7 +6,7 @@
     </mat-expansion-panel-header>
 
     <mat-panel-description>
-        TODO: google login in pending
+        TODO: Store customization settings in pending
     </mat-panel-description>
 
     <mat-action-row>
