--- a/src/app/modules/settings/site-settings/login-and-sign-up-options/login-and-sign-up-options.component.html
+++ b/src/app/modules/settings/site-settings/login-and-sign-up-options/login-and-sign-up-options.component.html
@@ -6,7 +6,7 @@
     </mat-expansion-panel-header>
 
     <mat-panel-description>
-        Currently I am {{panelOpenState ? 'open' : 'closed'}}
+        TODO: Working on login and sign up
     </mat-panel-description>
 
     <mat-action-row>
