--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,8 +26,8 @@ body {
   border-right-style: hidden;
 }
 mat-divider {
-  margin-top: 0.5rem /* 8px */ !important;
-  margin-bottom: 0.5rem /* 8px */ !important;
+  // margin-top: 0.5rem /* 8px */ !important;
+  // margin-bottom: 0.5rem /* 8px */ !important;
 }
 
 html,
