feat: add new language

--- a/src/app/layout/appbar/languages-menu/languages-menu.component.html
+++ b/src/app/layout/appbar/languages-menu/languages-menu.component.html
@@ -14,6 +14,7 @@
     <button (click)="changeLanguage('hi')" mat-menu-item>Hindi</button>
     <button (click)="changeLanguage('sv')" mat-menu-item>Swedish</button>
     <button (click)="changeLanguage('el')" mat-menu-item>Greek</button>
+    <button (click)="changeLanguage('am')" mat-menu-item>Amharic</button> <!-- New button for Amharic -->
 </mat-menu>
 
 <button mat-menu-item [matMenuTriggerFor]="languagesMenu">
