feat: chamges for add category sidebar

--- a/src/app/modules/support/support.component.html
+++ b/src/app/modules/support/support.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center flex-col justify-center page">
+<div class="flex items-center flex-col justify-center page-level2">
     <h1 mat-h1>Which type of Support do you want</h1>
     <div class="space-x-2">
         <button mat-flat-button color="primary">Sales  (pricing, budget etc)</button>
