fet: changes for sidebar

--- a/src/app/modules/stores/layout/header/header.component.html
+++ b/src/app/modules/stores/layout/header/header.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar>
+    <button mat-icon-button (click)="_layoutService.onSidebarToggle()">
+        <mat-icon>menu</mat-icon>
+    </button>
     <span>Manage products</span>
     <span class="spacer"></span>
 
