--- a/src/app/modules/stores/layout/sidebar/sidebar.component.html
+++ b/src/app/modules/stores/layout/sidebar/sidebar.component.html
@@ -1,7 +1,10 @@
 <mat-drawer-container>
-    <mat-drawer mode="side" [opened]="true">
+    <mat-drawer mode="side" [opened]="_layoutService.isSidebarOpen | async" (closed)="_layoutService.onSidebarToggle()" >
         <button mat-menu-item [routerLink]="'profile'"><mat-icon>personal</mat-icon>Personal</button>
         <button mat-menu-item [routerLink]="'site'"><mat-icon>web</mat-icon>Site settings</button>
     </mat-drawer>
+    <app-header></app-header>
+    <app-add-category-sidebar ></app-add-category-sidebar>
+
     <router-outlet></router-outlet>
 </mat-drawer-container>
