--- a/src/app/modules/stores/layout/header/header.component.html
+++ b/src/app/modules/stores/layout/header/header.component.html
@@ -6,7 +6,7 @@
     <span class="spacer"></span>
 
     <div class="space-x-2">
-        <button mat-stroked-button (click)="_layoutService.onAddCategorySidebarToggle()" color="primary">Add category</button>
+        <button mat-stroked-button (click)="toggle()" color="primary">Add category</button>
         <button mat-stroked-button color="primary">Add product</button>
         <button mat-stroked-button color="primary">
             Visit store <mat-icon> open_in_new </mat-icon>
