feat: product sidebar

--- a/src/app/layout/appbar/appbar.component.html
+++ b/src/app/layout/appbar/appbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <button mat-icon-button (click)="toggleSidebar()">
+    <button mat-icon-button (click)="_layoutService.toggle()">
         <mat-icon>menu</mat-icon>
     </button>
     <span>J dashboard</span>
