--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container autosize class="h-full fixed top-0">
-    <mat-drawer mode="over" [opened]="isOpened" (closed)="toggleSidebar()">
+    <mat-drawer mode="over" #rootSidebar>
         <a mat-menu-item [href]="'https://glowing-marigold-3c3b5e.netlify.app/'" target="_blank">
             <mat-icon>open_in_new</mat-icon> Go to Store
         </a>
