--- a/src/app/modules/stores/products/products.component.html
+++ b/src/app/modules/stores/products/products.component.html
@@ -1,1 +1,8 @@
-<app-category-list></app-category-list>
+<div class="page-level3">
+
+<div class="space-x-2 mx-auto h-full flex items-center container">
+
+    
+    <app-category-list></app-category-list>
+</div>
+</div>
