--- a/src/app/modules/stores/products/products-table/products-table.component.html
+++ b/src/app/modules/stores/products/products-table/products-table.component.html
@@ -1,29 +1,34 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="h-[40rem] w-full overflow-auto">
+    <table mat-table [dataSource]="dataSource">
+        <ng-container matColumnDef="Product">
+            <th mat-header-cell *matHeaderCellDef> Product </th>
+            <td mat-cell *matCellDef="let element" class="flex space-x-4">
+                <mat-card>
+                    <mat-card-header class="flex-row-reverse gap-4">
+                        <img mat-card-image class="h-20 w-36" src="{{ element.imageUrl }}" alt="{{ element.name }}">
+                        <mat-card-title class="ml-4">{{element.name}}</mat-card-title>
+                        <mat-card-subtitle>{{element.description.slice(0, 40)}}...</mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
+                    </mat-card-content>
+                </mat-card>
+            </td>
+        </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+        <ng-container matColumnDef="Price">
+            <th mat-header-cell *matHeaderCellDef> Price </th>
+            <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container>
+        <ng-container matColumnDef="Status">
+            <th mat-header-cell *matHeaderCellDef> Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
-        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-    </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<mat-paginator [length]="100" [pageSize]="30" aria-label="Select page of GitHub search results"></mat-paginator>
