--- a/src/app/modules/stores/products/category-list/category-list.component.html
+++ b/src/app/modules/stores/products/category-list/category-list.component.html
@@ -17,5 +17,5 @@
             <button mat-stroked-button color="primary">Add Product</button>
         </mat-card-actions>
     </div>
-    <app-products-table class="mat-elevation-z1 "></app-products-table>
+    <app-products-table class="mat-elevation-z1 w-full"></app-products-table>
 </div>
