--- a/src/app/modules/stores/products/products-table/products-table.component.html
+++ b/src/app/modules/stores/products/products-table/products-table.component.html
@@ -31,4 +31,4 @@
     </table>
 </div>
 
-<mat-paginator [length]="100" [pageSize]="30" aria-label="Select page of GitHub search results"></mat-paginator>
+<mat-paginator [length]="100" [pageSize]="10"></mat-paginator>
