--- a/src/app/modules/stores/products/products.component.html
+++ b/src/app/modules/stores/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="page-level3">
-    <div class="space-x-2 mx-auto h-full flex items-center">
-        <app-category-list></app-category-list>
+    <div class="space-x-2 mx-auto h-full flex items-center container">
+        <app-category-list class="w-full"></app-category-list>
     </div>
 </div>
